--- a/WebContent/registrareferencia.xhtml
+++ b/WebContent/registrareferencia.xhtml
@@ -61,7 +61,7 @@
 														<p:inputText id="COACES" value="#{GestorReferenciasCatastrales.sCOACES}" size="9" maxlength="9">
 														</p:inputText>
 													<p:message for="COACES" display="icon"/>
-													<p:commandButton value="Comprobar" update="msgs, popup, COACES, NURCAT" actionListener="#{GestorReferenciasCatastrales.comprobarActivo}"/>	
+													<p:commandButton value="Cargar Referencia" update="msgs, popup, COACES, NURCAT" actionListener="#{GestorReferenciasCatastrales.comprobarActivo}"/>	
 												</h:panelGrid>
 											</p:panel>
 										<p:commandButton value="Buscar un activo" update="COACES, NURCAT, form:activos" oncomplete="dlgBuscar.show()"/>		
@@ -91,7 +91,7 @@
 											</p:inputText>
 
 											<h:outputText for="COTEXA" value="COTEXA: " />
-											<p:inputText id="COTEXA" value="#{GestorReferenciasCatastrales.sCOTEXA}" size="10" maxlength="14">
+											<p:inputText id="COTEXA" value="#{GestorReferenciasCatastrales.sCOTEXA}" size="10" maxlength="14" disabled="true">
 											</p:inputText>
 
 
@@ -112,7 +112,7 @@
 
 						</h:panelGrid>
 					</p:panel>
-					<p:dialog header="Activos disponibles: " widgetVar="dlgTabla" resizable="false">  
+					<p:dialog header="Activos sin referencias asociadas: " widgetVar="dlgTabla" resizable="false">  
     				
 							<p:contextMenu for="activos">  
 								<p:menuitem value="Seleccionar" update="form:COACES, form:NURCAT, form:msgs, form:popup" icon="ui-icon-check" actionListener="#{GestorReferenciasCatastrales.seleccionarActivo}" oncomplete="dlgTabla.hide(); dlgBuscar.hide()"/>  
@@ -154,7 +154,7 @@
 									
 							</p:dataTable> 
 					</p:dialog>
-					<p:dialog header="Activos disponibles: " widgetVar="dlgBuscar" resizable="false">  
+					<p:dialog header="Buscar Activos sin Referencias asociadas" widgetVar="dlgBuscar" resizable="false">  
 									<p:fieldset legend="Criterios de Busqueda">
 										<h:panelGrid columns="1" cellpadding="5">
 											<p:panel id="panelBuscar" >
