--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -32,7 +32,7 @@
 
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorListaGastos.buscarGastos}"/>	
+													<p:commandButton value="Seleccionar" update="msgs, popup, activos" action="#{GestorListaGastos.cargarDetalles}"/>	
 
 										</h:panelGrid>
 									</p:fieldset>
@@ -78,7 +78,7 @@
 										<h:panelGrid columns="2" cellpadding="5">
 											<p:panel >
 												<h:panelGrid columns="4" cellpadding="5">
-													<h:outputText for="NUPROF" value="Codigo de activo: " />
+													<h:outputText for="NUPROF" value="Provisión de fondos: " />
 														<p:inputText id="NUPROF" value="#{GestorListaGastos.sNUPROF}" size="9" maxlength="9">
 														</p:inputText>
 													<p:message for="NUPROF" display="icon"/>
