--- a/WebContent/listagastos.xhtml
+++ b/WebContent/listagastos.xhtml
@@ -32,20 +32,24 @@
 
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-													<p:commandButton value="Detalles" update="msgs, popup, activos" action="#{GestorListaGastos.cargarDetalles}"/>
+													<p:commandButton value="Detalles" update="msgs, popup, activos" action="#{GestorListaGastos.cargarDetallesGasto}"/>
 													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, panelBuscarProvision, activos, provisiones, gastos, COACES, NUPROF" actionListener="#{GestorListaGastos.limpiarPlantilla}" />	
 
 										</h:panelGrid>
 									</p:fieldset>
 									<p:fieldset legend="Info">
 										<h:panelGrid columns="3" cellpadding="5">
-											<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button" />
-											<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button" />
-											<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top">  
-												<p:messages id="msgs"/>
-											</p:notificationBar>  
-											<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
-											<p:growl id="popup" />
+								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button"/>
+
+								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
+									<h:panelGrid columns="2" cellpadding="5">
+										<p:messages id="msgs"/>
+										<p:commandButton value="Ocultar" onclick="barraInfo.hide()" type="button"/>
+									</h:panelGrid>
+								</p:notificationBar>
+
+								<p:ajaxStatus onstart="statusDialog.show();" onsuccess="statusDialog.hide();"/>
+								<p:growl id="popup"/>
 										</h:panelGrid>
 									</p:fieldset>
 								</h:panelGrid>
@@ -144,6 +148,13 @@
 															</f:facet>
 															<h:outputText value="#{gasto.FEDEVE}" />
 														</p:column>
+
+							<f:facet name="footer">
+								<h:commandLink>
+									<p:graphicImage value="recursos/excel.png" />  
+									<p:dataExporter type="xls" target="gastos" fileName="listagastos" encoding="ISO-8859-15"/>  
+								</h:commandLink>
+							</f:facet> 
 
 						</p:dataTable>
 
